--- a/core/src/main/res/values-es/strings.xml
+++ b/core/src/main/res/values-es/strings.xml
@@ -779,4 +779,35 @@
   <string name="on_demand_config_setting_changed">Configuración actualizada satisfactoriamente.</string>
   <string name="on_demand_config_stream_text">Parece que usas mucho la reproducción en directo. ¿Quieres que las listas de episodios muestren los botones de escuchar en directo?</string>
   <string name="on_demand_config_download_text">Parece que usas mucho las descargas. ¿Quieres mostrar el botón de descargar en la lista de episodios?</string>
+    <string name="delete_playlist">Eliminar lista de reproducción</string>
+  <string name="delete_playlist_confirmation_msg">¿Quieres eliminar esta lista de reproducción?</string>
+  <string name="playlists_label">Listas de reproducción</string>
+  <string name="home_fragment_label">Hogar</string>
+  <string name="pref_auto_delete_playlist_summary">Excluir episodios de listas de reproducción de la eliminación automática</string>
+  <string name="pref_auto_delete_playlist_title">Mantener episodios en listas de reproducción</string>
+  <string name="add_to_playlist_label">Añadir a la lista de reproducción</string>
+  <string name="no_playlists_label">Sin listas de reproducción</string>
+  <string name="no_playlists_sub_label">Después de crear una lista de reproducción, aparecerá aquí.</string>
+  <string name="auto_download_cache_pref_summary">"El número de episodios mantenidos por descarga automática. Excluido de la eliminación automática. "</string>
+  <string name="home_label">Hogar</string>
+  <string name="left_short">Izquierda</string>
+  <string name="right_short">Derecha</string>
+  <string name="volume">Volumen</string>
+  <string name="repeat_episode">Repetir episodio</string>
+  <string name="feed_tags_label">Etiquetas</string>
+  <string name="feed_tags_summary">Cambia las etiquetas de este podcast para ayudar a organizar tus suscripciones</string>
+  <string name="sync_status_wait_for_downloads">A la espera de que se completen las descargas...</string>
+  <string name="synchronization_sync_changes_title">Sincronizar ahora</string>
+  <string name="synchronization_logout">Cerrar sesión</string>
+  <string name="pref_synchronization_logout_toast">El cierre de sesión se ha realizado correctamente</string>
+  <string name="synchronization_full_sync_title">Forzar la sincronización completa</string>
+  <string name="synchronization_summary_unchoosen">Puede elegir entre varios proveedores para sincronizar sus suscripciones y el estado de reproducción de episodios con</string>
+  <string name="synchronization_summary_nextcloud">Gpoddersync es una aplicación Nextcloud de código abierto que puede instalar fácilmente en su propio servidor. La aplicación es independiente del proyecto ApexPod.</string>
+  <string name="synchronization_nextcloud_authenticate_browser">Conceda acceso utilizando el navegador web abierto y vuelva a ApexPod.</string>
+  <string name="synchronization_choose_title">Elegir proveedor de sincronización</string>
+  <string name="synchronization_force_sync_summary">Volver a sincronizar todas las suscripciones y estados de episodios</string>
+  <string name="synchronization_sync_summary">Sincronizar los cambios de estado de la suscripción y del episodio</string>
+  <string name="dialog_choose_sync_service_title">Elegir proveedor de sincronización</string>
+  <string name="synchronization_login_status"><![CDATA[Lo que se ha iniciado como <i>%1$s</i> en <i>%2$s</i>. <br/><br/> Puede volver a elegir su proveedor de sincronización una vez que haya cerrado la sesión]]></string>
+  <string name="confirm_mobile_feed_refresh_dialog_message">La descarga de episodios a través de la conexión de datos móviles está deshabilitada en la configuración.\\n\\n¿Aún desea actualizar todos los podcasts a través de datos móviles?</string>
 </resources>
