Update catalan strings

--- a/core/src/main/res/values-ca/strings.xml
+++ b/core/src/main/res/values-ca/strings.xml
@@ -779,4 +779,35 @@
   <string name="on_demand_config_setting_changed">Ajust actualitzar exitosament</string>
   <string name="on_demand_config_stream_text">Pareix que escoltes en línia molt a sovint. Vols que les llistes d\'episodis mostren botons per a escoltar en línia?</string>
   <string name="on_demand_config_download_text">Pareix que baixes molt a sovint. Vols que les llistes d\'episodis mostren botons per a baixar episodis?</string>
+    <string name="confirm_mobile_feed_refresh_dialog_message">La descarga de episodios a través de la conexión de datos móviles está deshabilitada en la configuración.\\n\\n¿Aún desea actualizar todos los podcasts a través de datos móviles?</string>
+  <string name="synchronization_logout">Logout</string>
+  <string name="pref_synchronization_logout_toast">La sortida de sessió s\'ha realitzat correctament</string>
+  <string name="synchronization_sync_changes_title">Sincronitza ara</string>
+  <string name="synchronization_full_sync_title">Força la sincronització completa</string>
+  <string name="synchronization_login_status"><![CDATA[S'ha iniciat la sessió com a <i>%1$s</i> a <i>%2$s</i>. <br/><br/> Podeu tornar a triar el proveïdor de sincronització un cop hàgiu tancat la sessió]]></string>
+  <string name="synchronization_summary_unchoosen">Podeu triar entre diversos proveïdors per sincronitzar les subscripcions i l\'estat de reproducció d\'episodis amb</string>
+  <string name="synchronization_summary_nextcloud">Gpoddersync és una aplicació de codi obert Nextcloud que podeu instal·lar fàcilment al vostre propi servidor. L\'aplicació és independent del projecte ApexPod.</string>
+  <string name="synchronization_nextcloud_authenticate_browser">Concedeix accés mitjançant el navegador web obert i torna a l\'ApexPod.</string>
+  <string name="synchronization_choose_title">Trieu el proveïdor de sincronització</string>
+  <string name="synchronization_force_sync_summary">Torna a sincronitzar totes les subscripcions i els estats d\'episodis</string>
+  <string name="synchronization_sync_summary">Sincronitza els canvis d\'estat de subscripció i d\'episodi</string>
+  <string name="dialog_choose_sync_service_title">Trieu el proveïdor de sincronització</string>
+  <string name="sync_status_wait_for_downloads">S\'està esperant que es completin les baixades...</string>
+  <string name="feed_tags_label">Etiquetes</string>
+  <string name="feed_tags_summary">Canviar les etiquetes d\'aquest podcast per ajudar-vos a organitzar les subscripcions</string>
+  <string name="volume">Volum</string>
+  <string name="left_short">Esquerra</string>
+  <string name="right_short">Dreta</string>
+  <string name="repeat_episode">Repeteix l\'episodi</string>
+  <string name="delete_playlist">Suprimeix la llista de reproducció</string>
+  <string name="delete_playlist_confirmation_msg">Voleu suprimir aquesta llista de reproducció?</string>
+  <string name="playlists_label">Llistes de reproducció</string>
+  <string name="home_fragment_label">Llar</string>
+  <string name="pref_auto_delete_playlist_summary">Exclou els episodis de llistes de reproducció de la supressió automàtica</string>
+  <string name="pref_auto_delete_playlist_title">Conserva els episodis de la llista de reproducció</string>
+  <string name="add_to_playlist_label">Afegeix-ho a la llista de reproducció</string>
+  <string name="no_playlists_label">No hi ha llistes de reproducció</string>
+  <string name="no_playlists_sub_label">Després de crear una llista de reproducció, apareixerà aquí.</string>
+  <string name="auto_download_cache_pref_summary">"Nombre d'episodis conservats per descàrrega automàtica. S'ha exclòs de la supressió automàtica. "</string>
+  <string name="home_label">Llar</string>
 </resources>
