--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -846,7 +846,7 @@
     <string name="delete_playlist_confirmation_msg">Do you want to delete this playlist?</string>
     <string name="playlists_label">Playlists</string>
     <string name="home_fragment_label">Home</string>
-    <string name="pref_auto_delete_playlist_summary">Exclude playlisted episodes from auto delete</string>
+    <string name="pref_auto_delete_playlist_summary">Exclude playlisted episodes from automatic delete</string>
     <string name="pref_auto_delete_playlist_title">Keep Playlisted Episodes</string>
     <string name="add_to_playlist_label">Add to Playlist</string>
     <string name="no_playlists_label">No Playlists</string>
