--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -353,8 +353,9 @@
     <string name="project_pref">Project</string>
     <string name="synchronization_pref">Synchronization</string>
     <string name="synchronization_sum">Synchronize with other devices</string>
-    <string name="automation">Automation</string>
-    <string name="download_pref_details">Details</string>
+    <string name="automation">Updates</string>
+<!--    <string name="download_pref_details">Details</string>-->
+    <string name="download_pref_details">Downloads</string>
     <string name="import_export_pref">Import/Export</string>
     <string name="import_export_search_keywords">backup, restore</string>
     <string name="appearance">Appearance</string>
@@ -408,7 +409,8 @@
     <string name="pref_unpauseOnBluetoothReconnect_title">Bluetooth Reconnect</string>
     <string name="pref_stream_over_download_title">Prefer Streaming</string>
     <string name="pref_stream_over_download_sum">Display stream button instead of download button in lists.</string>
-    <string name="pref_mobileUpdate_title">Mobile Updates</string>
+<!--    <string name="pref_mobileUpdate_title">Mobile </string>-->
+    <string name="pref_mobileUpdate_title">Mobile Data</string>
     <string name="pref_mobileUpdate_sum">Select what should be allowed over the mobile data connection</string>
     <string name="pref_mobileUpdate_refresh">Podcast refresh</string>
     <string name="pref_mobileUpdate_images">Cover images</string>
